--- a/admin.html
+++ b/admin.html
@@ -164,9 +164,10 @@
                     const stack = [{ level: -1, children: result }];
                     for (const item of items) {
                         const label = item.label;
-                        const indent = label.match(/^\s*/)[0].length;
+                        const indentMatch = label.match(/^-*/);
+                        const indent = indentMatch ? indentMatch[0].length : 0;
                         const level = Math.floor(indent / 2);
-                        item.label = label.trim();
+                        item.label = label.replace(/^-*/, '');
                         if (!item.label && !item.url) continue;
                         while (level <= stack[stack.length - 1].level) {
                             stack.pop();
@@ -199,53 +200,23 @@
             async fetchRecentCommentsIfNeeded(force = false) { if (this.state.recentComments.length === 0 || force) try { const res = await fetch(`${this.config.workerUrl}/api/comments/recent`); this.state.recentComments = await res.json(); } catch (e) {} },
             async fetchSiteStatsIfNeeded(force = false) { if (!this.state.siteStats || force) try { const res = await fetch(`${this.config.workerUrl}/api/stats`); this.state.siteStats = await res.json(); } catch (e) {} },
             async fetchCarouselDataIfNeeded(force = false) { if (!this.state.carouselData || force) try { const res = await fetch(`${this.config.workerUrl}/api/carousel`); this.state.carouselData = await res.json(); } catch (e) {} },
-            async fetchAndRenderIcons() {
-                const el = document.getElementById('admin-content');
-                el.innerHTML = this.templates.loader();
-                if (this.state.faIcons.length === 0) {
-                    try {
-                        const response = await fetch('https://gravatar.azure.cc/static/lib/fontawesome5pro/css/all.min.css?v=1.5.8');
-                        const cssText = await response.text();
-                        const iconRegex = /\.fa-([a-zA-Z0-9-]+):before/g;
-                        this.state.faIcons = [...new Set([...cssText.matchAll(iconRegex)].map(match => match[1]))];
-                    } catch (error) { el.innerHTML = '<p class="text-red-500">无法加载图标列表</p>'; return; }
-                }
-                el.innerHTML = this.templates.iconExplorer(this.state.faIcons);
-            },
+            async fetchAndRenderIcons() { const el = document.getElementById('admin-content'); el.innerHTML = this.templates.loader(); if (this.state.faIcons.length === 0) { try { const response = await fetch('https://gravatar.azure.cc/static/lib/fontawesome5pro/css/all.min.css?v=1.5.8'); const cssText = await response.text(); const iconRegex = /\.fa-([a-zA-Z0-9-]+):before/g; this.state.faIcons = [...new Set([...cssText.matchAll(iconRegex)].map(match => match[1]))]; } catch (error) { el.innerHTML = '<p class="text-red-500">无法加载图标列表</p>'; return; } } el.innerHTML = this.templates.iconExplorer(this.state.faIcons); },
+            
             templates: {
                 loader: () => `<div class="flex h-full w-full justify-center items-center"><div class="loader"></div></div>`,
                 loginPage: () => `<div class="min-h-screen flex items-center justify-center"><div class="max-w-md w-full bg-white dark:bg-gray-800 p-8 rounded-lg shadow-md"><h2 class="text-2xl font-bold text-center mb-6">管理员登录</h2><form onsubmit="App.handleLogin(event)"><div class="mb-4"><label for="username">用户名</label><input type="text" id="username" name="username" required class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="mb-6"><label for="password">密码</label><input type="password" id="password" name="password" required class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white rounded">登录</button></form></div></div>`,
                 adminDashboard: () => `<div class="bg-white dark:bg-gray-900"><div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"><header class="flex justify-between items-center pb-4 border-b border-gray-200 dark:border-gray-700 mb-8"><h1 class="text-2xl font-bold">管理后台</h1><div><a href="index.html" class="text-blue-500 hover:underline mr-4">返回博客</a><button onclick="App.handleLogout()" class="bg-red-500 text-white py-2 px-4 rounded">退出</button></div></header><div class="flex gap-8"><aside class="w-1/5"><ul class="space-y-2"><li><button onclick="App.showView('posts')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">文章管理</button></li><li><button onclick="App.showView('nav')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">导航设置</button></li><li><button onclick="App.showView('links')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">友链管理</button></li><li><button onclick="App.showView('carousel')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">轮播图管理</button></li><li><button onclick="App.showView('comments')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">评论管理</button></li><li><button onclick="App.showView('settings')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">网站设置</button></li><li><button onclick="App.showView('icons')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">图标展示</button></li></ul></aside><main id="admin-content" class="w-4/5"></main></div></div></div>`,
                 postManager: () => `<div class="w-full"><div class="flex justify-between items-center mb-6"><h2 class="text-xl font-semibold">文章列表</h2><button onclick="App.showView('editor')" class="bg-blue-500 text-white py-2 px-4 rounded-md">撰写新文章</button></div><div class="bg-white dark:bg-gray-800 shadow rounded-lg overflow-x-auto"><table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700"><thead><tr><th class="px-6 py-3 text-left">标题</th><th class="px-6 py-3 text-left">分类</th><th class="px-6 py-3 text-left">日期</th><th class="px-6 py-3 text-right">操作</th></tr></thead><tbody class="divide-y divide-gray-200 dark:divide-gray-700">${App.state.posts.map(p => `<tr><td class="px-6 py-4">${p.title}</td><td class="px-6 py-4">${p.category}</td><td class="px-6 py-4">${new Date(p.date).toLocaleDateString()}</td><td class="px-6 py-4 text-right"><button onclick="App.showView('editor', '${p.slug}')" class="text-indigo-600 dark:text-indigo-400">编辑</button><button onclick="App.deletePost('${p.slug}')" class="text-red-600 dark:text-red-400 ml-2">删除</button></td></tr>`).join('')}</tbody></table></div></div>`,
                 navEditor: () => {
-                    const flattenNav = (items, level = 0) => {
-                        let result = [];
-                        items.forEach(item => {
-                            result.push({ ...item, level });
-                            if (item.children) {
-                                result = result.concat(flattenNav(item.children, level + 1));
-                            }
-                        });
-                        return result;
-                    };
+                    const flattenNav = (items, level = 0) => { let result = []; items.forEach(item => { result.push({ ...item, level }); if (item.children) { result = result.concat(flattenNav(item.children, level + 1)); } }); return result; };
                     const flatNavItems = flattenNav(App.state.navItems || []);
                     const rowsHtml = flatNavItems.map(item => {
                         const isSvg = item.icon && item.icon.trim().startsWith('<svg');
                         const display = isSvg ? 'SVG' : (item.icon ? `<i class="${item.icon} fa-fw"></i>` : '选择');
                         const value = isSvg ? '' : item.icon;
-                        return `<div class="nav-item-row grid grid-cols-12 gap-2"><input type="text" name="label" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600" value="${'  '.repeat(item.level)}${item.label || ''}"><input type="text" name="url" value="${item.url || ''}" class="col-span-4 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><div class="col-span-2"><button type="button" class="w-full h-full flex items-center justify-center text-sm border rounded dark:bg-gray-700 dark:border-gray-600" onclick="App.openIconPicker(this)">${display}</button><input type="hidden" name="icon_class" value="${value || ''}"></div><button type="button" onclick="App.removeNavItemRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button></div>`;
+                        return `<div class="nav-item-row grid grid-cols-12 gap-2"><input type="text" name="label" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600" value="${'--'.repeat(item.level)}${item.label || ''}"><input type="text" name="url" value="${item.url || ''}" class="col-span-4 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><div class="col-span-2"><button type="button" class="w-full h-full flex items-center justify-center text-sm border rounded dark:bg-gray-700 dark:border-gray-600" onclick="App.openIconPicker(this)">${display}</button><input type="hidden" name="icon_class" value="${value || ''}"></div><button type="button" onclick="App.removeNavItemRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button></div>`;
                     }).join('');
-                    
-                    return `<div class="w-full">
-                        <h2 class="text-xl font-semibold mb-6">导航菜单设置</h2>
-                        <p class="text-sm text-gray-500 mb-4">提示: 在名称前添加空格来创建子菜单。2个空格为二级菜单，4个空格为三级菜单，以此类推。</p>
-                        <form onsubmit="App.handleNavFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow">
-                            <div class="grid grid-cols-12 gap-2 mb-2 text-sm font-semibold"><div class="col-span-5">菜单项名称</div><div class="col-span-4">URL</div><div class="col-span-2">图标</div></div>
-                            <div id="nav-item-list" class="space-y-2 mb-4">${rowsHtml}</div>
-                            <button type="button" onclick="App.addNavItemRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md mb-4">+ 添加</button>
-                            <div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存</button></div>
-                        </form>
-                    </div>`;
+                    return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">导航菜单设置</h2><p class="text-sm text-gray-500 mb-4">提示: 在名称前添加"-"来创建子菜单。"--"为二级菜单，"----"为三级菜单，以此类推。</p><form onsubmit="App.handleNavFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow"><div class="grid grid-cols-12 gap-2 mb-2 text-sm font-semibold"><div class="col-span-5">菜单项名称</div><div class="col-span-4">URL</div><div class="col-span-2">图标</div></div><div id="nav-item-list" class="space-y-2 mb-4">${rowsHtml}</div><button type="button" onclick="App.addNavItemRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md mb-4">+ 添加</button><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存</button></div></form></div>`;
                 },
                 carouselManager: () => { const data = App.state.carouselData || { slides: [] }; setTimeout(() => { const container = document.getElementById('carousel-slides-list'); container.innerHTML = ''; if(data.slides && data.slides.length > 0) { data.slides.forEach(slide => App.addCarouselSlideRow(slide)); } else { App.addCarouselSlideRow(); } }, 0); return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">轮播图管理</h2><form onsubmit="App.handleCarouselFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow"><div class="mb-4"><h3 class="text-lg font-medium mb-2">海报列表</h3><div class="grid grid-cols-12 gap-2 mb-2 text-sm font-semibold"><div class="col-span-6">图片 URL</div><div class="col-span-5">链接 URL</div></div><div id="carousel-slides-list" class="space-y-2"></div></div><button type="button" onclick="App.addCarouselSlideRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md mb-4">+ 添加海报</button><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button></div></form></div>`; },
                 iconExplorer: (icons = []) => `<div class="w-full"><h2 class="text-xl font-semibold mb-6">图标列表 (Font Awesome 5 Pro)</h2><p class="text-sm text-gray-500 mb-4">下方列出了每个图标名称可用的所有样式。点击基础类名可直接复制。</p><div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow" style="max-height: 70vh; overflow-y: auto;"><div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">${icons.map(iconName => { const classToCopy = `fa-${iconName}`; return `<div class="p-3 border dark:border-gray-700 rounded-md"><p class="text-sm font-mono cursor-pointer hover:text-blue-500" onclick="navigator.clipboard.writeText('${classToCopy}')" title="点击复制: ${classToCopy}">${classToCopy}</p><div class="flex items-center justify-around mt-2 text-2xl text-center icon-grid"><i class="fas ${classToCopy} fa-fw" title="fas ${classToCopy}"></i><i class="far ${classToCopy} fa-fw" title="far ${classToCopy}"></i><i class="fal ${classToCopy} fa-fw" title="fal ${classToCopy}"></i><i class="fab ${classToCopy} fa-fw" title="fab ${classToCopy}"></i></div></div>`}).join('')}</div></div></div>`,
