--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <span>Copyright © 2025 号令天下 Powered by Cloudflare Workers & Pages. Theme designed with Tailwind CSS.</span>
+                                        <span>Copyright © ${stats.copyright_year || new Date().getFullYear()} ${stats.copyright_name || 'My Blog'}. Powered by Cloudflare Workers & Pages. Theme designed with Tailwind CSS.</span>
                                     </div>
                                 </div>
                             </div>
@@ -248,19 +248,19 @@
                 friendlyLinksSection: () => { if (!App.state.friendlyLinks || App.state.friendlyLinks.length === 0) return ''; return `<div class="max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8"><div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 p-6 my-8"><h3 class="font-semibold text-lg mb-4">友情链接</h3><div class="text-sm text-gray-600 dark:text-gray-400">${(App.state.friendlyLinks||[]).map(link=>`<a href="${link.url}" target="_blank" rel="noopener noreferrer" class="hover:text-blue-500 mr-4">${link.name}</a>`).join('')}</div></div></div>`; },
                 carousel: () => { const data = App.state.carouselData; if (!data || !data.slides || data.slides.length === 0) return ''; const slidesHtml = data.slides.map(slide => { const slideContent = `<img src="${slide.imageUrl}" class="w-full h-full object-cover">`; const linkWrapper = slide.linkUrl && slide.linkUrl !== '#' ? `<a href="${slide.linkUrl}" target="_blank" class="block w-full h-full">${slideContent}</a>` : slideContent; return `<div class="swiper-slide">${linkWrapper}</div>`; }).join(''); return `<div class="swiper w-full h-[230px] rounded-lg shadow-lg"><div class="swiper-wrapper">${slidesHtml}</div><div class="swiper-pagination"></div><div class="swiper-button-prev"></div><div class="swiper-button-next"></div></div>`; },
                 homePage: (posts, title = "最新文章") => `${App.templates.carousel()}<div class="mt-[18px]"><h1 class="text-lg md:text-[1.3rem] font-bold mb-2">${title}</h1><div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700"><div class="divide-y divide-gray-200 dark:divide-gray-700">${posts.length > 0 ? posts.map(post => App.templates.postCard(post)).join('') : '<p class="p-6">没有找到相关文章。</p>'}</div></div></div>`,
-                postCard: (post) => `<div class="p-6 flex flex-row items-center">
-                    <div class="relative w-1/3 flex-shrink-0 overflow-hidden rounded-md aspect-[16/9]">
+                postCard: (post) => `<div class="p-6 flex flex-col md:flex-row items-start md:items-center">
+                    <div class="relative w-full md:w-1/3 flex-shrink-0 overflow-hidden rounded-md aspect-[16/9] mb-4 md:mb-0">
                         <a href="#/post/${post.slug}" class="block h-full w-full group">
                             <img src="${post.imageUrl || 'https://placehold.co/400x300/e2e8f0/cbd5e0?text=Image'}" alt="${post.title}" class="w-full h-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-110" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/cbd5e0?text=Image';">
                         </a>
                         <a href="#/category/${encodeURIComponent(post.category)}" class="absolute top-3 left-3 bg-black bg-opacity-50 text-white px-2 py-1 rounded text-xs font-semibold hover:bg-opacity-70">${post.category}</a>
                     </div>
-                    <div class="pl-5 flex-grow flex flex-col justify-between self-stretch">
+                    <div class="w-full md:pl-5 flex-grow flex flex-col justify-between self-stretch">
                         <div>
-                            <h2 class="text-[15px] md:text-xl font-bold mb-2"><a href="#/post/${post.slug}" class="hover:text-blue-600 dark:hover:text-blue-400">${post.isPinned ? '<span class="text-red-500 font-bold">[置顶]</span> ' : ''}${post.title}</a></h2>
-                            <div class="hidden md:block text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div>
+                            <h2 class="text-lg md:text-xl font-bold mb-2"><a href="#/post/${post.slug}" class="hover:text-blue-600 dark:hover:text-blue-400">${post.isPinned ? '<span class="text-red-500 font-bold">[置顶]</span> ' : ''}${post.title}</a></h2>
+                            <div class="text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div>
                         </div>
-                        <div class="flex justify-between items-center text-xs text-gray-500 dark:text-gray-400 mt-2">
+                        <div class="flex justify-between items-center text-xs text-gray-500 dark:text-gray-400 mt-auto">
                             <span>${new Date(post.date).toLocaleDateString()}</span>
                             <div class="flex items-center gap-1"><i class="fas fa-eye"></i><span>${post.views || 0}</span></div>
                         </div>
