--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
                         </a>
                         <a href="#/category/${encodeURIComponent(post.category)}" class="absolute top-3 left-3 bg-black bg-opacity-50 text-white px-2 py-1 rounded text-xs font-semibold hover:bg-opacity-70">${post.category}</a>
                     </div>
-                    <div class="w-full pl-5 flex-grow flex flex-col justify-between self-stretch">
+                    <div class="pl-5 flex-grow flex flex-col justify-between self-stretch">
                         <div>
-                            <h2 class="text-lg md:text-xl font-bold mb-2"><a href="#/post/${post.slug}" class="hover:text-blue-600 dark:hover:text-blue-400">${post.isPinned ? '<span class="text-red-500 font-bold">[置顶]</span> ' : ''}${post.title}</a></h2>
-                            <div class="text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div>
+                            <h2 class="text-base md:text-lg font-bold mb-2"><a href="#/post/${post.slug}" class="hover:text-blue-600 dark:hover:text-blue-400">${post.isPinned ? '<span class="text-red-500 font-bold">[置顶]</span> ' : ''}${post.title}</a></h2>
+                            <div class="hidden md:block text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div>
                         </div>
                         <div class="flex justify-between items-center text-xs text-gray-500 dark:text-gray-400 mt-auto">
                             <span>${new Date(post.date).toLocaleDateString()}</span>
